--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,5 +35,6 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
-      - run: yarn test
+      - run: yarn lint
+      - run: yarn ci-test
       - run: yarn build
