--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "clean": "lerna run clean",
         "start": "cd demo && npm start",
         "test": "lerna run test --stream",
+        "ci-test": "lerna run ci-test --stream",
+        "lint": "lerna run lint --stream",
         "bootstrap": "lerna bootstrap"
     },
     "devDependencies": {
