--- a/packages/jarl-react-redux/package.json
+++ b/packages/jarl-react-redux/package.json
@@ -6,7 +6,8 @@
     "module": "es/index.js",
     "sideEffects": false,
     "scripts": {
-        "test": "jest",
+        "test": "jest --watch",
+        "ci-test": "jest",
         "build": "node ./tools/build.js",
         "watch": "babel ./source -d . --ignore __tests__ --watch",
         "prepublishOnly": "node ./tools/build.js",
@@ -24,9 +25,7 @@
         "reducer.js"
     ],
     "jest": {
-        "setupFiles": [
-            "raf/polyfill"
-        ],
+        "setupFiles": ["raf/polyfill"],
         "testRegex": "__tests__/.+\\.test\\.js$"
     },
     "keywords": [
