--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -30,7 +30,7 @@
         "StateProvider.js"
     ],
     "jest": {
-        "setupFiles": ["raf/polyfill"],
+        "setupFiles": ["raf/polyfill", "./tools/configureJest.js"],
         "testRegex": "__tests__/.+\\.test\\.js$",
         "collectCoverageFrom": ["source/*.js", "source/lib/*.js"]
     },
