--- a/demo/package.json
+++ b/demo/package.json
@@ -7,7 +7,12 @@
         "start": "babel-node ./server/index.js",
         "build": "babel-node ./build/index.js",
         "clean": "git clean -fdX .",
-        "lint": "eslint source --max-warnings 0"
+        "lint": "eslint . --max-warnings 0",
+        "ci-stop": "pkill -SIGINT JARLDEMO",
+        "ci-cypress": "cypress run",
+        "ci-e2e-run": "npm-run-all ci-cypress ci-stop",
+        "ci-start": "babel-node ./server/ci.js",
+        "ci-e2e": "npm-run-all --parallel ci-start ci-e2e-run"
     },
     "dependencies": {
         "emotion": "^8.0.12",
@@ -45,9 +50,10 @@
         "babel-register": "^6.26.0",
         "babel-runtime": "^6.26.0",
         "css-loader": "^0.28.11",
-        "cypress": "^1.4.2",
+        "cypress": "^2.1.0",
         "documentation": "^6.1.0",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "npm-run-all": "^4.1.2",
         "opn": "^5.2.0",
         "postcss-loader": "^2.1.3",
         "raw-loader": "^0.5.1",
