--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -63,7 +63,22 @@
         "warning": "^3.0.0"
     },
     "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.0",
+        "babel-eslint": "^8.1.0",
         "babel-jest": "^22.0.4",
+        "babel-plugin-add-react-displayname": "^0.0.4",
+        "babel-plugin-dev-expression": "^0.2.1",
+        "babel-plugin-external-helpers": "^6.22.0",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-es2015-rollup": "^3.0.0",
+        "babel-preset-react": "^6.24.1",
+        "babel-runtime": "^6.26.0",
         "babelrc-rollup": "^3.0.0",
         "date-fns": "^1.29.0",
         "enzyme": "^3.2.0",
