Add missing tests for Advanced Routing

--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,7 @@
         "no-mixed-operators": 0,
         "prefer-destructuring": 0,
         "jsx-a11y/click-events-have-key-events": 0,
-        "jsx-a11y/no-noninteractive-element-interactions": 0
+        "jsx-a11y/no-noninteractive-element-interactions": 0,
+        "jsx-a11y/accessible-emoji": 0
     }
 }
