--- a/demo/package.json
+++ b/demo/package.json
@@ -8,11 +8,11 @@
         "build": "babel-node ./build/index.js",
         "clean": "git clean -fdX .",
         "lint": "eslint . --max-warnings 0",
-        "ci-stop": "pkill -SIGQUIT JARLDEMO",
+        "ci-stop": "pkill -SIGINT JARLDEMO",
         "ci-cypress": "cypress run --record --key ${CYPRESS_DASHBOARD}",
-        "ci-e2e-run": "npm-run-all ci-cypress ci-stop",
         "ci-start": "babel-node ./server/ci.js",
-        "ci-e2e": "npm-run-all --parallel ci-start ci-e2e-run"
+        "local-e2e-run": "npm-run-all ci-cypress ci-stop",
+        "local-e2e": "npm-run-all --parallel ci-start local-e2e-run"
     },
     "dependencies": {
         "emotion": "^8.0.12",
