--- a/packages/jarl-react-native/package.json
+++ b/packages/jarl-react-native/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jarl-react-native",
-    "version": "1.0.0-alpha.4",
+    "version": "1.0.0-alpha.5",
     "description": "React Native support for JARL",
     "main": "main.js",
     "sideEffects": false,
@@ -11,12 +11,21 @@
         "lint": "eslint . --max-warnings 0 --color",
         "coverage": "jest --coverage"
     },
-    "files": ["index.js", "Link.js", "NativeProvider.js"],
+    "files": [
+        "index.js",
+        "Link.js",
+        "NativeProvider.js"
+    ],
     "jest": {
-        "setupFiles": ["raf/polyfill", "./tools/configureJest.js"],
+        "setupFiles": [
+            "raf/polyfill",
+            "./tools/configureJest.js"
+        ],
         "testRegex": "__tests__/.+\\.test\\.js$",
         "preset": "react-native",
-        "collectCoverageFrom": ["*.js"]
+        "collectCoverageFrom": [
+            "*.js"
+        ]
     },
     "keywords": [
         "react",
@@ -41,7 +50,7 @@
     "dependencies": {
         "history": "^4.7.2",
         "invariant": "^2.2.4",
-        "jarl-react": "^1.0.0-alpha.4",
+        "jarl-react": "^1.0.0-alpha.5",
         "prop-types": "^15.6.0",
         "warning": "^3.0.0"
     },
@@ -53,6 +62,7 @@
         "babel-plugin-add-react-displayname": "^0.0.4",
         "babel-plugin-dev-expression": "^0.2.1",
         "babel-plugin-external-helpers": "^6.22.0",
+        "babel-plugin-react-native-web": "^0.5.4",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
@@ -61,9 +71,8 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-es2015-rollup": "^3.0.0",
         "babel-preset-react": "^6.24.1",
-        "babel-runtime": "^6.26.0",
-        "babel-plugin-react-native-web": "^0.5.4",
         "babel-preset-react-native": "^4.0.0",
+        "babel-runtime": "^6.26.0",
         "enzyme": "^3.2.0",
         "enzyme-adapter-react-16": "^1.1.0",
         "jest": "^22.1.4",
