--- a/packages/jarl-react-redux/package.json
+++ b/packages/jarl-react-redux/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jarl-react-redux",
-    "version": "1.0.0-alpha.4",
+    "version": "1.0.0-alpha.5",
     "description": "Redux integration for JARL",
     "main": "index.js",
     "module": "es/index.js",
@@ -25,7 +25,10 @@
         "reducer.js"
     ],
     "jest": {
-        "setupFiles": ["raf/polyfill", "./tools/configureJest.js"],
+        "setupFiles": [
+            "raf/polyfill",
+            "./tools/configureJest.js"
+        ],
         "testRegex": "__tests__/.+\\.test\\.js$"
     },
     "keywords": [
@@ -52,7 +55,7 @@
     },
     "dependencies": {
         "invariant": "^2.2.2",
-        "jarl-react": "^1.0.0-alpha.4",
+        "jarl-react": "^1.0.0-alpha.5",
         "prop-types": "^15.6.0"
     },
     "devDependencies": {
