--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
         "eslint-plugin-react": "^7.3.0",
         "lerna": "^2.10.0"
     },
-    "workspaces": [
-        "packages/jarl-react",
-        "packages/jarl-react-redux",
-        "packages/jarl-react-native",
-        "demo"
-    ],
+    "workspaces": {
+        "packages": [
+            "packages/jarl-react",
+            "packages/jarl-react-redux",
+            "packages/jarl-react-native",
+            "demo"
+        ],
+        "nohoist": ["**/react-native", "**/react-native/**"]
+    },
     "version": "1.0.0-alpha-5"
 }
