--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -30,15 +30,9 @@
         "StateProvider.js"
     ],
     "jest": {
-        "setupFiles": [
-            "raf/polyfill",
-            "./tools/configureJest.js"
-        ],
+        "setupFiles": ["raf/polyfill", "./tools/configureJest.js"],
         "testRegex": "__tests__/.+\\.test\\.js$",
-        "collectCoverageFrom": [
-            "source/*.js",
-            "source/lib/*.js"
-        ]
+        "collectCoverageFrom": ["source/*.js", "source/lib/*.js"]
     },
     "keywords": [
         "react",
@@ -59,8 +53,8 @@
         "url": "https://github.com/downplay/jarl-react.git"
     },
     "peerDependencies": {
-        "prop-types": ">=15",
-        "react": ">=15"
+        "prop-types": ">=15.0.0",
+        "react": ">=15.0.0"
     },
     "dependencies": {
         "hoist-non-react-statics": "^2.0.0",
