--- a/demo/package.json
+++ b/demo/package.json
@@ -53,6 +53,7 @@
         "cypress": "^2.1.0",
         "documentation": "^6.1.0",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "fs-extra": "^5.0.0",
         "npm-run-all": "^4.1.2",
         "opn": "^5.2.0",
         "postcss-loader": "^2.1.3",
