--- a/packages/jarl-react/package.json
+++ b/packages/jarl-react/package.json
@@ -10,7 +10,6 @@
         "ci-test": "jest --colors",
         "build": "node ./tools/build.js --colors",
         "watch": "babel ./source -d . --ignore __tests__ --watch",
-        "prepublishOnly": "node ./tools/build.js",
         "clean": "git clean -fdX .",
         "lint": "eslint source --max-warnings 0 --color",
         "coverage": "jest --coverage"
@@ -30,15 +29,9 @@
         "StateProvider.js"
     ],
     "jest": {
-        "setupFiles": [
-            "raf/polyfill",
-            "./tools/configureJest.js"
-        ],
+        "setupFiles": ["raf/polyfill", "./tools/configureJest.js"],
         "testRegex": "__tests__/.+\\.test\\.js$",
-        "collectCoverageFrom": [
-            "source/*.js",
-            "source/lib/*.js"
-        ]
+        "collectCoverageFrom": ["source/*.js", "source/lib/*.js"]
     },
     "keywords": [
         "react",
