--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,22 +137,22 @@ jobs:
 
 workflows:
   version: 2
-  untagged-build:
+  pr_build:
     jobs:
       - build
-          filters:
-            branches:
-              ignore: master
+        filters:
+          branches:
+            ignore: master
   # Publish successful builds only on master with version tag
-  master-tagged-build:
+  master_build:
     jobs:
       - build
-          filters:
-            branches:
-              only: master
+        filters:
+          branches:
+            only: master
       - publish:
-          requires:
-            - build
-          filters:
-            tags:
-              only: /^v[0-9]+(\.[0-9]+)*/
+        requires:
+          - build
+        filters:
+          tags:
+            only: /^v[0-9]+(\.[0-9]+)*/
