Deciphering the arcane workings of circleci workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,28 +144,20 @@ workflows:
           filters:
             branches:
               ignore: master
-  master_build:
-    jobs:
-      # Builds anything on master with no version tag
-      - build:
-          filters:
-            branches:
-              only: master
-            tags:
-              ignore: /^v[0-9]+(\.[0-9]+)*/
   master_deploy:
     jobs:
       # Build anything on master
       - build:
           filters:
-            tags:
-              only: /^v[0-9]+(\.[0-9]+)*/
             branches:
+              ignore: /.*/
               only: master
       # Only publish when tagged
       - publish:
           requires:
             - build
           filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /^v[0-9]+(\.[0-9]+)*/
