--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,7 +154,7 @@ workflows:
               only: master
             tags:
               only: /.*/
-              ignore: /^v[0-9]+(\.[0-9]+)*/
+              ignore: /v[0-9]+(\.[0-9]+)*/
   master_deploy:
     jobs:
       # Build tagged on master
@@ -164,7 +164,7 @@ workflows:
               ignore: /.*/
               only: master
             tags:
-              only: /^v[0-9]+(\.[0-9]+)*/
+              only: /v[0-9]+(\.[0-9]+)*/
       # Publish on success
       - publish:
           requires:
@@ -173,4 +173,4 @@ workflows:
             branches:
               ignore: /.*/
             tags:
-              only: /^v[0-9]+(\.[0-9]+)*/
+              only: /v[0-9]+(\.[0-9]+)*/
