--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,34 +144,16 @@ workflows:
           filters:
             branches:
               ignore: master
-  master_build:
-    jobs:
-      # Build any other tags or untagged on master?
-      - build:
-          filters:
-            branches:
-              ignore: /.*/
-              only: master
-            tags:
-              only: /.*/
-              ignore: /v[0-9]+(\.[0-9]+)*/
+  # For now, attempt to deploy anything that lands on master
   master_deploy:
     jobs:
-      # Build tagged on master
       - build:
           filters:
             branches:
-              ignore: /.*/
               only: master
-            tags:
-              only: /v[0-9]+(\.[0-9]+)*/
-      # Publish on success
       - publish:
           requires:
             - build
           filters:
             branches:
-              ignore: /.*/
               only: master
-            tags:
-              only: /v[0-9]+(\.[0-9]+)*/
