--- a/demo/package.json
+++ b/demo/package.json
@@ -5,16 +5,35 @@
     "scripts": {
         "cypress": "cypress open",
         "start": "babel-node ./server/index.js",
+        "start-prod": "babel-node ./server/production.js",
         "build": "babel-node ./build/index.js",
         "clean": "git clean -fdX .",
         "lint": "eslint . --max-warnings 0",
         "ci-stop": "pkill -SIGINT JARLDEMO",
         "ci-cypress": "cypress run --record --key ${CYPRESS_DASHBOARD}",
-        "ci-start": "babel-node ./server/ci.js",
+        "ci-start": "babel-node ./server/production.js",
         "local-e2e-run": "npm-run-all ci-cypress ci-stop",
         "local-e2e": "npm-run-all --parallel ci-start local-e2e-run"
     },
     "dependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.0",
+        "babel-eslint": "^8.1.0",
+        "babel-loader": "^7.1.2",
+        "babel-plugin-add-react-displayname": "^0.0.4",
+        "babel-plugin-emotion": "^8.0.12",
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-plugin-transform-react-stateless-component-name": "^1.1.2",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-react": "^6.24.1",
+        "babel-register": "^6.26.0",
+        "babel-runtime": "^6.26.0",
+        "fs-extra": "^5.0.0"
+    },
+    "devDependencies": {
         "emotion": "^8.0.12",
         "emotion-theming": "^8.0.12",
         "history": "^4.7.2",
@@ -31,29 +50,11 @@
         "rebass-emotion": "^1.0.7",
         "recompose": "^0.26.0",
         "redux": "^3.7.2",
-        "sanitize.css": "^5.0.0"
-    },
-    "devDependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-core": "^6.26.0",
-        "babel-eslint": "^8.1.0",
-        "babel-loader": "^7.1.2",
-        "babel-plugin-add-react-displayname": "^0.0.4",
-        "babel-plugin-emotion": "^8.0.12",
-        "babel-plugin-syntax-dynamic-import": "^6.18.0",
-        "babel-plugin-transform-class-properties": "^6.24.1",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-plugin-transform-react-stateless-component-name": "^1.1.2",
-        "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-register": "^6.26.0",
-        "babel-runtime": "^6.26.0",
+        "sanitize.css": "^5.0.0",
         "css-loader": "^0.28.11",
         "cypress": "^2.1.0",
         "documentation": "^6.1.0",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
-        "fs-extra": "^5.0.0",
         "npm-run-all": "^4.1.2",
         "opn": "^5.2.0",
         "postcss-loader": "^2.1.3",
