--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,7 +150,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=app -t company/jarl-demos:$CIRCLE_SHA1 demo
+            docker build --cache-from=app -t app demo
       - run:
           name: Save Docker image layer cache
           command: |
@@ -161,7 +161,8 @@ jobs:
             - /caches/app.tar
           key: v4-dockerlayer-{{ checksum "demo/dist/asset-manifest.json" }}
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
-      - run: docker push downplay/jarl-demos:$CIRCLE_SHA1
+      - run: docker app tag "downplay/jarl-demos:$CIRCLE_SHA1"
+      - run: docker push "downplay/jarl-demos:$CIRCLE_SHA1"
 
       # Create auth file for npm
       - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
