--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,9 +160,23 @@ jobs:
           paths:
             - /caches/app.tar
           key: v4-dockerlayer-{{ checksum "demo/dist/asset-manifest.json" }}
-      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
-      - run: docker app tag "downplay/jarl-demos:$CIRCLE_SHA1"
-      - run: docker push "downplay/jarl-demos:$CIRCLE_SHA1"
+
+      - run:
+          name: Docker push
+          command: |
+            docker login -u $DOCKER_USER -p $DOCKER_PASS
+            docker tag app "downplay/jarl-demos:$CIRCLE_SHA1"
+            docker push "downplay/jarl-demos:$CIRCLE_SHA1"
+
+      # Now deployment
+      - run:
+          name: Now deployment
+          command: |
+            echo "FROM downplay/jarl-demos:$CIRCLE_SHA1" >> now/Dockerfile
+            yarn global add now
+            cd now
+            now -t ${NOW_TOKEN}
+            now -t ${NOW_TOKEN} alias jarl.downplay.co
 
       # Create auth file for npm
       - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
