--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,6 +128,18 @@ jobs:
       - run: yarn bootstrap
       - run: yarn build
 
+      # For whatever reason lerna publish wasn't finding the auth file,
+      # just run them all manually thru npm.
+      # These have to be published before docker can be built; even tho
+      # they won't be installed, Yarn tries to resolve them and errors
+      # if they don't exist yet. https://github.com/yarnpkg/yarn/issues/4646
+      - run:
+          name: Publish to npm
+          command: |
+            cd packages/jarl-react && npm publish
+            cd ../jarl-react-native && npm publish
+            cd ../jarl-react-redux && npm publish
+
       # Docker
       - setup_remote_docker
       - run:
@@ -179,15 +191,6 @@ jobs:
 
       # Create auth file for npm
       - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-
-      # For whatever reason lerna publish wasn't finding the auth file,
-      # just run them all manually thru npm.
-      - run:
-          name: Publish to npm
-          command: |
-            cd packages/jarl-react && npm publish
-            cd ../jarl-react-native && npm publish
-            cd ../jarl-react-redux && npm publish
 
 workflows:
   version: 2
