Force lint in precommit with lint-staged

--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
         "ci-publish": "lerna exec -- npm publish",
         "lint": "lerna run lint --stream",
         "bootstrap": "lerna bootstrap",
-        "tag-version": "lerna publish --skip-npm"
+        "tag-version": "lerna publish --skip-npm",
+        "precommit": "lint-staged"
+    },
+    "lint-staged": {
+        "src/**/*.{js,jsx}": ["eslint --fix --max-warnings 0", "git add"],
+        "src/**/*.{js,jsx,json,css}": ["prettier --write", "git add"]
     },
     "devDependencies": {
         "babel-eslint": "^8.2.2",
@@ -21,6 +26,8 @@
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-jsx-a11y": "^6.0.2",
         "eslint-plugin-react": "^7.3.0",
-        "lerna": "^2.10.0"
+        "husky": "^0.14.3",
+        "lerna": "^2.10.0",
+        "lint-staged": "^7.0.4"
     }
 }
