--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "precommit": "lint-staged"
     },
     "lint-staged": {
-        "src/**/*.{js,jsx}": ["eslint --fix --max-warnings 0", "git add"],
-        "src/**/*.{js,jsx,json,css}": ["prettier --write", "git add"]
+        "**/*.{js,jsx}": ["eslint --fix --max-warnings 0", "git add"],
+        "**/*.{js,jsx,json,css}": ["prettier --write", "git add"]
     },
     "devDependencies": {
         "babel-eslint": "^8.2.2",
@@ -28,6 +28,7 @@
         "eslint-plugin-react": "^7.3.0",
         "husky": "^0.14.3",
         "lerna": "^2.10.0",
-        "lint-staged": "^7.0.4"
+        "lint-staged": "^7.0.4",
+        "prettier": "^1.11.1"
     }
 }
