--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
     "private": true,
     "name": "jarl-react-packages",
     "scripts": {
-        "build": "node ./build/all.js",
+        "build": "node ./scripts/build.js",
         "clean": "lerna run clean",
         "start": "cd demo && npm start",
         "test": "lerna run test --stream",
         "ci-test": "lerna run ci-test --stream",
         "ci-e2e": "lerna run ci-e2e --stream",
         "ci-publish": "lerna exec -- npm publish",
+        "ci-get-clipboard": "node ./scripts/clipboard.js",
         "lint": "lerna run lint --stream",
         "bootstrap": "lerna bootstrap",
         "tag-version": "lerna publish --skip-npm",
@@ -20,6 +21,7 @@
     },
     "devDependencies": {
         "babel-eslint": "^8.2.2",
+        "clipboardy": "^1.2.3",
         "eslint": "^4.6.1",
         "eslint-config-airbnb": "^16.1.0",
         "eslint-config-prettier": "^2.9.0",
